Fixed text align

--- a/style.css
+++ b/style.css
@@ -7,16 +7,6 @@ div {
   display: block;
 }
 
-.div heading {
-  text-align: center;
-}
-
-.div subheading {
-  text-align: center;
-  color: orange;
-}
-
-.div subheading2 {
-  text-align: center;
-  color: gray;
+.center {
+  text-align: center
 }
